--- a/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
+++ b/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
@@ -20,7 +20,7 @@ CAR       = cg-nascar-rwd
 DATADIR   = cars/$(CAR)
 
 DATA      = $(CAR).xml \
-            $(CAR).rgb tex-wheel.rgb \
+            $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
 data-cars-nascar_PKGFILES = $(DATA)
