--- a/torcs/torcs/data/cars/models/porsche-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/porsche-gt1/Makefile
@@ -21,7 +21,7 @@ CAR       = porsche-gt1
 DATADIR   = cars/$(CAR)
 
 DATA      = $(CAR).xml \
-            $(CAR).rgb tex-wheel.rgb \
+            $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGFILES	= $(DATA)
