--- a/torcs/torcs/data/cars/models/360-modena/Makefile
+++ b/torcs/torcs/data/cars/models/360-modena/Makefile
@@ -21,7 +21,7 @@ CAR       = 360-modena
 DATADIR   = cars/360-modena
 
 DATA      = $(CAR).xml \
-            $(CAR).rgb tex-wheel.rgb \
+            $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
 data_PKGFILES	= $(DATA)
