--- a/torcs/torcs/data/cars/models/xj-220/Makefile
+++ b/torcs/torcs/data/cars/models/xj-220/Makefile
@@ -20,7 +20,7 @@ CAR          = xj-220
 DATADIR      = cars/$(CAR)
 
 DATA         = $(CAR).xml \
-               $(CAR).rgb tex-wheel.rgb \
+               $(CAR).rgb tex-wheel.rgb shadow.rgb \
                $(shell find *.acc -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGFILES	= $(DATA)
