--- a/torcs/torcs/Make-config.in
+++ b/torcs/torcs/Make-config.in
@@ -1,3 +1,5 @@
+# @configure_input@
+
 ##############################################################################
 #
 #    file                 : Make-config.in
@@ -14,7 +16,6 @@
 #   (at your option) any later version.
 #
 ##############################################################################
-
 
 SHELL = @SHELL@
 
