--- a/torcs/torcs/data/cars/models/p406/Makefile
+++ b/torcs/torcs/data/cars/models/p406/Makefile
@@ -19,7 +19,7 @@
 DATADIR   = cars/p406
 
 DATA      = 	$(shell find *.xml -maxdepth 0 -type f -print) \
-		$(shell find *.ac -maxdepth 0 -type f -print) \
+		$(shell find *.acc -maxdepth 0 -type f -print) \
 		$(shell find *.rgb -maxdepth 0 -type f -print)
 
 include ${MAKE_DEFAULT}
