--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -16,7 +16,7 @@
 ##############################################################################
 
 AC_INIT(Make-config.in)
-AM_INIT_AUTOMAKE(torcs, 1.3.0)
+AM_INIT_AUTOMAKE(torcs, 1.3.0-pre2)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -48,6 +48,11 @@ AC_ARG_ENABLE(debug,
 	[  --enable-debug          set the debug mode], 
 	CFLAGS="$CFLAGS -g -DDEBUG -DDEBUG_OUT",
 	CFLAGS="$CFLAGS -O3")
+
+AC_ARG_ENABLE(single-texture,
+	[  --enable-single-texture  Disable multi-texturing], 
+	CFLAGS="$CFLAGS -DFORCE_SINGLE_TEXTURE",
+	CFLAGS="$CFLAGS")
 
 AC_ARG_ENABLE(ccmalloc,
 	[  --enable-ccmalloc       set the ccmalloc mode (beware path...)], 
