--- a/torcs/torcs/src/drivers/bt/2/Makefile
+++ b/torcs/torcs/src/drivers/bt/2/Makefile
@@ -3,8 +3,6 @@
 #    file                 : Makefile
 #    created              : Wed Jan 8 18:31:16 CET 2003
 #    copyright            : (C) 2002 Bernhard Wymann
-#    email                : berniw@bluewin.ch
-#    version              : $Id$
 #
 ##############################################################################
 #
@@ -16,16 +14,13 @@
 ##############################################################################
 
 ROBOT       = bt
-MODULE      = ${ROBOT}.so
-MODULEDIR   = drivers/${ROBOT}
-SOURCES     = ${ROBOT}.cpp driver.cpp opponent.cpp spline.cpp pit.cpp
-
-SHIPDIR     = drivers/${ROBOT}
-SHIP        = ${ROBOT}.xml logo.rgb
-SHIPSUBDIRS = 0 1 2 3 4 5 6 7 8 9
+SHIPDIR     = drivers/${ROBOT}/2
+SHIP        = default.xml
+SHIPSUBDIRS = 
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
 src-robots-bt_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
 src-robots-bt_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
-
 include ${MAKE_DEFAULT}
+
+
