--- a/torcs/torcs/src/tools/Makefile
+++ b/torcs/torcs/src/tools/Makefile
@@ -17,11 +17,11 @@
 
 
 
-TOOLSUBDIRS   = launcher
+SUBDIRS		= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
-SUBDIRS	      = $(shell find * -maxdepth 0 -type d -print | grep -v CVS | grep -v $(TOOLSUBDIRS))
+TOOLSUBDIRS	= $(SUBDIRS)
 
-PKGSUBDIRS     = $(TOOLSUBDIRS) $(SUBDIRS)
+PKGSUBDIRS	=  $(SUBDIRS)
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
