--- a/torcs/torcs/src/tools/launcher/torcs.in
+++ b/torcs/torcs/src/tools/launcher/torcs.in
@@ -18,14 +18,17 @@
 #
 ##############################################################################
 
-DEFAULT_RUNTIME=@prefix@/share/games/@PACKAGE@
-
-LOCAL_CONF=$HOME/.torcs
-
 prefix=@prefix@
 exec_prefix=@exec_prefix@
 
-if [ -d $DEFAULT_RUNTIME ]
+BINDIR=@bindir@
+LIBDIR=@libdir@/torcs
+DATADIR=@datadir@/games/torcs
+VARDIR=@localstatedir@/games/torcs
+
+LOCAL_CONF=$HOME/.torcs
+
+if [ -d $DATADIR ]
 then
     if [ ! -d $LOCAL_CONF ]
     then
@@ -33,20 +36,20 @@ then
 	mkdir -p $LOCAL_CONF
 	echo "$LOCAL_CONF created, copying/linking game data"
     fi
-    export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:@libdir@
-    cd $DEFAULT_RUNTIME
-    if [ -f ./setup_linux.sh ]
+    export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$LIBDIR/lib
+    cd $DATADIR
+    if [ -f $LIBDIR/setup_linux.sh ]
     then
-	/bin/bash ./setup_linux.sh $LOCAL_CONF
+	/bin/bash $LIBDIR/setup_linux.sh $LOCAL_CONF
 	if [ $? -ne 0 ]
 	then
 	    exit 1
 	fi
     else
-	echo "$DEFAULT_RUNTIME/setup_linux.sh file does not exist, check your installation"
+	echo "$LIBDIR/setup_linux.sh file does not exist, check your installation"
 	exit 1
     fi
-    ./torcs -l $LOCAL_CONF $*
+    $LIBDIR/torcs -l $LOCAL_CONF -D $DATADIR -L $LIBDIR -V $VARDIR $*
     exit 0
 fi
 
