--- a/torcs/torcs/src/tools/package/specfiles/torcs-robot-berniw.spec.in
+++ b/torcs/torcs/src/tools/package/specfiles/torcs-robot-berniw.spec.in
@@ -34,6 +34,10 @@ cd %{_tmppath}/%{name}-ship/%{_prefix}/share/games/torcs
 mkdir -p $RPM_BUILD_ROOT/%{_prefix}/share/games/torcs
 cp -r drivers $RPM_BUILD_ROOT/%{_prefix}/share/games/torcs
 cd -
+cd %{_tmppath}/%{name}-ship/%{_prefix}/lib/torcs
+mkdir -p $RPM_BUILD_ROOT/%{_prefix}/lib/torcs
+cp -r drivers $RPM_BUILD_ROOT/%{_prefix}/lib/torcs
+cd -
 rm -rf %{_tmppath}/%{name}-ship
 
 %clean
@@ -42,8 +46,12 @@ rm -rf $RPM_BUILD_ROOT
 %files
 %defattr(-,root,root,-)
 %{_prefix}/share/games/torcs/*
+%{_prefix}/lib/torcs/*
 
 %changelog
+* Mon Aug 25 2003 Eric Espié <Eric.Espie@free.fr> 1.2.2
+- added copying of libraries
+
 * Mon Mar 24 2003 Eric Espié <Eric.Espie@free.fr> 1.2.0
 - new version
 
