--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -16,7 +16,7 @@
 ##############################################################################
 
 AC_INIT(Make-config.in)
-AM_INIT_AUTOMAKE(torcs, 1.3.0-pre2)
+AM_INIT_AUTOMAKE(torcs, 1.2.2)
 
 dnl Checks for programs.
 AC_PROG_CC
@@ -147,6 +147,9 @@ AC_OUTPUT(Make-config \
 	src/doc/torcsdoc.conf \
 	src/tools/package/specfiles/torcs-data.spec \
 	src/tools/package/specfiles/torcs-data-cars-Patwo-Design.spec \
+	src/tools/package/specfiles/torcs-data-cars-kcendra-gt.spec \
+	src/tools/package/specfiles/torcs-data-cars-kcendra-sport.spec \
+	src/tools/package/specfiles/torcs-data-cars-kcendra-roadsters.spec \
 	src/tools/package/specfiles/torcs-data-cars-extra.spec \
 	src/tools/package/specfiles/torcs-data-tracks-base.spec \
 	src/tools/package/specfiles/torcs-robot-K1999.spec \
