--- a/torcs/torcs/data/cars/models/p406/Makefile
+++ b/torcs/torcs/data/cars/models/p406/Makefile
@@ -22,6 +22,10 @@ DATA      = 	$(shell find *.xml -maxdepth 0 -type f -print) \
 		$(shell find *.acc -maxdepth 0 -type f -print) \
 		$(shell find *.rgb -maxdepth 0 -type f -print)
 
+data-cars-extra_PKGFILES	= $(DATA)
+
+data-cars-extra_PKGDIR		= $(DATADIR)
+
 include ${MAKE_DEFAULT}
 
 
