Track map display, initial checkin.

--- a/torcs/torcs/src/modules/graphic/ssggraph/Makefile
+++ b/torcs/torcs/src/modules/graphic/ssggraph/Makefile
@@ -17,7 +17,8 @@
 
 
 SOURCES   = grmain.cpp grboard.cpp grsound.cpp ssggraph.cpp grcam.cpp grcar.cpp grscreen.cpp\
-	    grscene.cpp grutil.cpp grshadow.cpp grsmoke.cpp grskidmarks.cpp grloadac.cpp grmultitexstate.cpp grvtxtable.cpp
+	    grscene.cpp grutil.cpp grshadow.cpp grsmoke.cpp grskidmarks.cpp grloadac.cpp\
+		grmultitexstate.cpp grvtxtable.cpp grtrackmap.cpp
 
 MODULE    = ssggraph.so
 
