--- a/torcs/torcs/Make-config.in
+++ b/torcs/torcs/Make-config.in
@@ -54,7 +54,7 @@ CFLAGS   =  @CFLAGS@ ${CFLAGSD}
 #EXT_LIBS = -lpthread @LIBS@
 EXT_LIBS = @LIBS@
 #LDFLAGS =  @LDFLAGS@ -L${EXPORTBASE}/lib -L/usr/lib -L/usr/local/lib
-LDFLAGS =  @LDFLAGS@ -L${EXPORTBASE}/lib -L/usr/lib 
+LDFLAGS =  -L${EXPORTBASE}/lib @LDFLAGS@ -L/usr/lib 
 
 #INCFLAGS =  -I${EXPORTBASE}/include -I/usr/include -I/usr/local/include
 INCFLAGS =  -I${EXPORTBASE}/include 
