--- a/torcs/torcs/data/cars/models/vm-x4/Makefile
+++ b/torcs/torcs/data/cars/models/vm-x4/Makefile
@@ -19,16 +19,16 @@ CAR       = vm-x4
 
 DATADIR   = cars/$(CAR)
 
-DATA      = readme.txt \
+DATA      = $(shell find *.txt -maxdepth 0 -type f -print) \
             $(shell find *.xml -maxdepth 0 -type f -print) \
             $(shell find *.rgb -maxdepth 0 -type f -print) \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
 DATA_devel      = $(shell find * -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-VM_PKGFILES	= $(DATA)
 
-data-cars-extra_PKGDIR	= $(DATADIR)
+data-cars-VM_PKGDIR	= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
