--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -137,7 +137,7 @@ int main() {
 
 dnl Check the GL capabilities
 ADDCFLAGS=""
-AC_MSG_CHECKING([for ALPHA capabilities])
+AC_MSG_CHECKING([for OpenGL driver ALPHA capabilities])
 AC_TRY_RUN([
 #include <GL/glut.h>
 
