--- a/torcs/torcs/src/tools/nfs2ac/Makefile
+++ b/torcs/torcs/src/tools/nfs2ac/Makefile
@@ -22,9 +22,9 @@ PROGRAM		= nfs2ac-bin
 
 SOURCES		= mainnfs2ac.cpp
 
-src-tools_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-tools_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
