--- a/torcs/torcs/src/tools/accc/Makefile
+++ b/torcs/torcs/src/tools/accc/Makefile
@@ -31,9 +31,9 @@ SOURCES		= mainaccc.cpp ../../linux/linuxspec.cpp ac3dload.cpp ac3dgroup.cpp
 
 SOLIBS		= -ltgf -lplibssg -lplibsg -lplibul -ltxml
 
-src-tools_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-tools_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
