--- a/torcs/torcs/src/tools/nfsperf/Makefile
+++ b/torcs/torcs/src/tools/nfsperf/Makefile
@@ -26,9 +26,9 @@ SOURCES		= mainnfsperf.cpp
 
 SOLIBS		= -ltgf -ltxml
 
-src-tools_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-tools_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
 
