--- a/torcs/torcs/src/tools/texmapper/Makefile
+++ b/torcs/torcs/src/tools/texmapper/Makefile
@@ -26,8 +26,8 @@ SOURCES   	= maintexmapper.cpp ssgSaveAC.cpp
 
 SOLIBS    	= -lplibssg -lplibsg -lplibul -ltgf -ltgfclient -ltxml -lpng
 
-src-tools_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
+src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
-src-tools_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src_PKGDIR	= ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
