Further modifications to the 3d reaction forces calculation. Major differences in the reaction force when checking the Z-collision (still does not work properly when upside-down though). It seems to me that with the current code the car is always at the correct angle, so the incorrect perceived angle problem is not there anymore as far as I can see. Minor caveat: Road friction is always on the car plane, but since the wheels are cylindrical it should be on the tangent plane between the wheel and road. Will fix that when the wheel model is made completely independent.

--- a/torcs/torcs/src/modules/simu/simuv3/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv3/Makefile
@@ -16,7 +16,7 @@
 ##############################################################################
 
 
-MODULE		= simuv3.so
+MODULE		= simuv2.so
 
 MODULEDIR	= modules/simu
 
@@ -36,6 +36,10 @@ SOURCES		= simu.cpp \
 		  categories.cpp
 
 LIBS		=  -lplibsg -lplibul -L${EXPORTBASE}/lib -lsolid
+
+SUBDIRS		= SOLID-2.0
+
+EXPINCDIRS	= SOLID-2.0
 
 PKGSUBDIRS	= $(SUBDIRS)
 
