--- a/torcs/torcs/data/tracks/g-track-1/Makefile
+++ b/torcs/torcs/data/tracks/g-track-1/Makefile
@@ -16,7 +16,7 @@
 ##############################################################################
 
 
-DATADIR   = tracks/oval/g-track-1
+DATADIR   = tracks/road/g-track-1
 
 DATA      = g-track-1.xml g-track-1.ac background.png  g-track-1.png $(shell find * -maxdepth 0 -type f -name '*.rgb')
 
