--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -16,7 +16,7 @@
 ##############################################################################
 
 AC_INIT(Make-config.in)
-AM_INIT_AUTOMAKE(torcs, 1.2.2)
+AM_INIT_AUTOMAKE(torcs, 1.2.2-rc1)
 
 dnl Checks for programs.
 AC_PROG_CC
