--- a/torcs/torcs/data/cars/models/kc-db4z/Makefile
+++ b/torcs/torcs/data/cars/models/kc-db4z/Makefile
@@ -23,7 +23,8 @@ DATA      = $(shell find * -maxdepth 0 -type f -print)
 
 DATA_PKG  = 	$(shell find *.acc -maxdepth 0 -type f -print) \
 		$(shell find *.rgb -maxdepth 0 -type f -print) \
-		kc-db4z.xml readme.txt
+		$(shell find *.xml -maxdepth 0 -type f -print) \
+		$(shell find *.txt -maxdepth 0 -type f -print) \
 
 data-cars-kcendra-gt_PKGFILES	= $(DATA_PKG)
 
