--- a/torcs/torcs/data/tracks/dirt-1/Makefile
+++ b/torcs/torcs/data/tracks/dirt-1/Makefile
@@ -19,9 +19,9 @@ DATADIR   = tracks/dirt/dirt-1
 
 DATA      = dirt-1.xml background.png dirt-1.ac dirt-1.png
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-dirt_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-dirt_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
