--- a/torcs/torcs/data/tracks/e-track-3/Makefile
+++ b/torcs/torcs/data/tracks/e-track-3/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/road/e-track-3
 
 DATA      = e-track-3.xml background.png env.rgb e-track-3.ac e-track-3.png
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-road_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-road_PKGDIR		= $(DATADIR)
 
 
 include ${MAKE_DEFAULT}
