--- a/torcs/torcs/data/tracks/e-track-6/Makefile
+++ b/torcs/torcs/data/tracks/e-track-6/Makefile
@@ -22,9 +22,9 @@ DATA = $(shell find * -maxdepth 0 -type f -print)
 
 DATA_PKG      = e-track-6.xml background.png e-track-6.acc e-track-6.png
 
-data-tracks-base_PKGFILES	= $(DATA_PKG)
+data-tracks-road_PKGFILES	= $(DATA_PKG)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-road_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
