--- a/torcs/torcs/data/tracks/mixed-1/Makefile
+++ b/torcs/torcs/data/tracks/mixed-1/Makefile
@@ -19,9 +19,9 @@ DATADIR   = tracks/dirt/mixed-1
 
 DATA = $(shell find * -maxdepth 0 -type f -print)
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-dirt_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-dirt_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
