--- a/torcs/torcs/src/drivers/sparkle/Makefile
+++ b/torcs/torcs/src/drivers/sparkle/Makefile
@@ -22,10 +22,10 @@ SOURCES     = ${ROBOT}.cpp driver.cpp opponent.cpp spline.cpp pit.cpp
 
 SHIPDIR     = drivers/${ROBOT}
 SHIP        = ${ROBOT}.xml logo.rgb
-SHIPSUBDIRS = 0
+SHIPSUBDIRS = $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
 
 PKGSUBDIRS  = ${SHIPSUBDIRS}
-src-robots-sparkle_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
-src-robots-sparkle_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
+src-robots-berniw_PKGFILES = $(shell find * -maxdepth 0 -type f -print)
+src-robots-berniw_PKGDIR   = ${PACKAGE}-${VERSION}/$(subst ${TORCS_BASE},,$(shell pwd))
 
 include ${MAKE_DEFAULT}
