--- a/torcs/torcs/data/tracks/a-speedway/Makefile
+++ b/torcs/torcs/data/tracks/a-speedway/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/oval/a-speedway
 
 DATA      = a-speedway.xml background.png a-speedway.ac a-speedway.png
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-oval_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-oval_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
