--- a/torcs/torcs/data/tracks/dirt-2/Makefile
+++ b/torcs/torcs/data/tracks/dirt-2/Makefile
@@ -19,9 +19,9 @@ DATADIR   = tracks/dirt/dirt-2
 
 DATA      = dirt-2.xml background.png dirt-2.ac dirt-2.png
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-dirt_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-dirt_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
