--- a/torcs/torcs/data/tracks/dirt-3/Makefile
+++ b/torcs/torcs/data/tracks/dirt-3/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/dirt/dirt-3
 
 DATA      = dirt-3.xml background.png background2.png dirt-3.ac dirt-3.png
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-dirt_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-dirt_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
