--- a/torcs/torcs/data/tracks/e-track-4/Makefile
+++ b/torcs/torcs/data/tracks/e-track-4/Makefile
@@ -20,9 +20,9 @@ DATADIR   = tracks/road/e-track-4
 
 DATA      = e-track-4.xml background.png e-track-4.ac e-track-4.png
 
-data-tracks-base_PKGFILES	= $(DATA)
+data-tracks-road_PKGFILES	= $(DATA)
 
-data-tracks-base_PKGDIR		= $(DATADIR)
+data-tracks-road_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
