--- a/torcs/torcs/src/linux/torcs.in
+++ b/torcs/torcs/src/linux/torcs.in
@@ -36,7 +36,7 @@ then
 	mkdir -p $LOCAL_CONF
 	echo "$LOCAL_CONF created, copying/linking game data"
     fi
-    export LD_LIBRARY_PATH=$LD_LIBRARY_PATH:$LIBDIR/lib
+    export LD_LIBRARY_PATH=$LIBDIR/lib:$LD_LIBRARY_PATH
     cd $DATADIR
     if [ -f $LIBDIR/setup_linux.sh ]
     then
