More stability, temperature, more hooks to graphic module.

--- a/torcs/torcs/src/modules/simu/simuv3/Makefile
+++ b/torcs/torcs/src/modules/simu/simuv3/Makefile
@@ -41,7 +41,7 @@ SUBDIRS		= SOLID-2.0
 
 EXPINCDIRS	= SOLID-2.0
 
-PKGSUBDIRS	= $(SUBDIRS)
+PKGSUBDIRS	= simuv3#$(SUBDIRS)
 
 src_PKGFILES	= $(shell find * -maxdepth 0 -type f -print)
 
