--- a/torcs/torcs/src/modules/graphic/Makefile
+++ b/torcs/torcs/src/modules/graphic/Makefile
@@ -16,7 +16,9 @@
 ##############################################################################
 
 
-SUBDIRS		= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
+#SUBDIRS		= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
+
+SUBDIRS		= ssggraph
 
 SHIPSUBDIRS     = $(SUBDIRS)
 
