--- a/torcs/torcs/src/modules/simu/Makefile
+++ b/torcs/torcs/src/modules/simu/Makefile
@@ -16,7 +16,8 @@
 ##############################################################################
 
 
-SUBDIRS		= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
+#SUBDIRS		= $(shell find * -maxdepth 0 -type d -print | grep -v CVS)
+SUBDIRS		= simuv2 simuv3
 
 DATASUBDIRS	= $(SUBDIRS)
 
