--- a/torcs/torcs/src/doc/torcsdoc.conf
+++ b/torcs/torcs/src/doc/torcsdoc.conf
@@ -1,4 +1,4 @@
-# Generated automatically from torcsdoc.conf.in by configure.
+# src/doc/torcsdoc.conf.  Generated from torcsdoc.conf.in by configure.
 
 ##############################################################################
 #
