--- a/torcs/torcs/configure.in
+++ b/torcs/torcs/configure.in
@@ -59,8 +59,6 @@ AC_ARG_ENABLE(profiler,
 	ADDCFLAGS="$ADDCFLAGS -DPROFILER",
 	ADDCFLAGS="$ADDCFLAGS")
 
-#ADDCFLAGS="$ADDCFLAGS -mieee-fp"
-
 CFLAGS="$CFLAGS $ADDCFLAGS"
 CXXFLAGS="$CXXFLAGS $ADDCFLAGS"
 LDFLAGS="$LDFLAGS -L$x_libraries"
@@ -120,17 +118,16 @@ AC_CHECK_LIB(plibssg, main,,AC_MSG_ERROR([Can't find libplibssg. Please check co
 AC_CHECK_LIB(plibssgaux, main,,AC_MSG_ERROR([Can't find libplibssgaux. Please check config.log and if you can't solve the problem send the file to torcs-users@lists.sourceforge.net with the subject \"torcs compilation problem\"]))
 
 dnl Taken from FlightGear
-AC_MSG_CHECKING([for plib 1.6.0 or newer])
+AC_MSG_CHECKING([for plib 1.8.3 or newer])
 AC_TRY_RUN([
 #include <unistd.h>
 #include <plib/ul.h>
 
-#define MIN_PLIB_VERSION 160
+#define MIN_PLIB_VERSION 183
 
 int main() {
-    int major, minor, micro;
 
-    if ( PLIB_VERSION != MIN_PLIB_VERSION ) {
+    if ( PLIB_VERSION < MIN_PLIB_VERSION ) {
 	 return -1;
     }
 
