--- a/torcs/torcs/src/linux/Makefile
+++ b/torcs/torcs/src/linux/Makefile
@@ -27,6 +27,7 @@ LDFLAGS = -rdynamic
 
 SOLIBS  =  -lracescreens  \
 	   -lrobottools   \
+	   -llearning   \
 	   -lclient       \
 	   -lconfscreens  \
 	   -ltgf          \
