--- a/torcs/torcs/data/cars/models/360-modena/Makefile
+++ b/torcs/torcs/data/cars/models/360-modena/Makefile
@@ -20,11 +20,11 @@ CAR       = 360-modena
 
 DATADIR   = cars/360-modena
 
-DATA      = $(CAR).xml \
+DATA      = $(CAR).xml  readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data_PKGFILES	= $(DATA)
+data_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
 data_PKGDIR	= $(DATADIR)
 
