--- a/torcs/torcs/data/cars/models/baja-bug/Makefile
+++ b/torcs/torcs/data/cars/models/baja-bug/Makefile
@@ -19,11 +19,11 @@ CAR       = baja-bug
 
 DATADIR   = cars/baja-bug
 
-DATA      = $(CAR).xml \
+DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
 data-cars-extra_PKGDIR		= $(DATADIR)
 
