--- a/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
+++ b/torcs/torcs/data/cars/models/cg-nascar-rwd/Makefile
@@ -19,11 +19,11 @@ CAR       = cg-nascar-rwd
 
 DATADIR   = cars/$(CAR)
 
-DATA      = $(CAR).xml \
+DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-nascar_PKGFILES = $(DATA)
+data-cars-nascar_PKGFILES = $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
 data-cars-nascar_PKGDIR	= $(DATADIR)
 
