--- a/torcs/torcs/data/cars/models/vm-x4/Makefile
+++ b/torcs/torcs/data/cars/models/vm-x4/Makefile
@@ -24,9 +24,7 @@ DATA      = $(shell find *.txt -maxdepth 0 -type f -print) \
             $(shell find *.rgb -maxdepth 0 -type f -print) \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-DATA_devel      = $(shell find * -maxdepth 0 -type f -print)
-
-data-cars-VM_PKGFILES	= $(DATA)
+data-cars-VM_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
 data-cars-VM_PKGDIR	= $(DATADIR)
 
