--- a/torcs/torcs/data/cars/models/clkdtm/Makefile
+++ b/torcs/torcs/data/cars/models/clkdtm/Makefile
@@ -15,17 +15,18 @@
 #
 ##############################################################################
 
+CAR	  = clkdtm
 
+DATADIR   = cars/$(CAR)
 
-DATADIR   = cars/clkdtm
+DATA      = $(CAR).xml \
+            $(CAR).rgb shadow.rgb tex-wheel.rgb \
+            $(shell find *.acc -maxdepth 0 -type f -print) \
+	    readme.txt 
 
-DATA      = $(shell find *.xml -maxdepth 0 -type f -print) \
-            $(shell find *.rgb -maxdepth 0 -type f -print) \
-            $(shell find *.acc -maxdepth 0 -type f -print)
+data-cars-extra_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA) clkdtm.xcf $(shell find *.ac -maxdepth 0 -type f -print)
-
-data-cars-extra_PKGDIR	= $(DATADIR)
+data-cars-extra_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
