--- a/torcs/torcs/data/cars/models/lotus-gt1/Makefile
+++ b/torcs/torcs/data/cars/models/lotus-gt1/Makefile
@@ -19,13 +19,13 @@ CAR       = lotus-gt1
 
 DATADIR   = cars/$(CAR)
 
-DATA      = $(CAR).xml \
+DATA      = $(CAR).xml readme.txt \
             $(CAR).rgb tex-wheel.rgb shadow.rgb \
             $(shell find *.acc -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGFILES	= $(DATA)
+data-cars-extra_PKGFILES	= $(DATA) $(shell find *.xcf -maxdepth 0 -type f -print)
 
-data-cars-extra_PKGDIR	= $(DATADIR)
+data-cars-extra_PKGDIR		= $(DATADIR)
 
 include ${MAKE_DEFAULT}
 
